--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
+<style>
+    body{
+        background: #f0f0f0;
+    }
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+</style>
 <body>
     <div id='app'></div>
     <script src="./dist/bundle.js"></script>
